--- a/package.json
+++ b/package.json
@@ -33,18 +33,19 @@
     "babel-plugin-transform-es2015-classes": "^6.5.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.5.2",
     "babel-plugin-transform-object-assign": "^6.3.13",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-polyfill": "^6.26.0",
     "babelify": "^7.2.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.21.0",
     "node-sass": "^4.9.4",
-    "url-loader": "^1.1.2",
     "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.1.2",
     "webpack": "^4.12.0",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.0.8",
