--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^15.0.2",
     "react-hot-loader": "^3.0.0-beta.2",
     "react-router-dom": "^5.0.0",
+    "redux": "^4.0.4",
     "v8-compile-cache": "^2.0.0"
   },
   "devDependencies": {
