--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.4",
+    "react-redux": "^7.1.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "url-loader": "^1.1.2",
