--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-loader": "^3.0.0-beta.2",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.4",
+    "react-redux": "5.0.6",
     "v8-compile-cache": "^2.0.0"
   },
   "devDependencies": {
@@ -45,7 +46,6 @@
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.4",
-    "react-redux": "^7.1.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "url-loader": "^1.1.2",
