--- a/redux/package.json
+++ b/redux/package.json
@@ -10,5 +10,8 @@
     "server": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react-redux": "^7.1.0"
+  }
 }
