--- a/redux/package.json
+++ b/redux/package.json
@@ -11,7 +11,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "react-redux": "^7.1.0"
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:5000"
+    }
   }
 }
