--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-hot-loader": "^3.0.0-beta.2",
+    "react-redux": "5.0.6",
     "react-router-dom": "^5.0.0",
     "redux": "^4.0.4",
-    "react-redux": "5.0.6",
+    "redux-thunk": "^2.3.0",
     "v8-compile-cache": "^2.0.0"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.4",
     "sass-loader": "^7.0.3",
+    "serve": "^11.1.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.1.2",
     "webpack": "^4.12.0",
