--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
+    "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.9.4",
     "sass-loader": "^7.0.3",
     "serve": "^11.1.0",
