--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.9.4",
+    "reselect": "^4.0.0",
     "sass-loader": "^7.0.3",
     "serve": "^11.1.0",
     "style-loader": "^0.21.0",
