--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/yndpro/knowledge-hierarchy#readme",
   "dependencies": {
     "axios": "^0.18.0",
+    "mobx": "^3.3.2",
+    "mobx-react": "^4.3.5",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-hot-loader": "^3.0.0-beta.2",
@@ -33,6 +35,8 @@
     "babel-loader": "^7.1.4",
     "babel-plugin-external-helpers": "^6.4.0",
     "babel-plugin-import": "^1.10.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-es2015-classes": "^6.5.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.5.2",
     "babel-plugin-transform-object-assign": "^6.3.13",
